--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -3,4 +3,7 @@
     <item
         android:id="@+id/blog"
         android:title="Blogs" />
+    <item
+        android:id="@+id/fileSave"
+        android:title="File System"/>
 </menu>
